Small styling changes, to fix padding and margin on mobile devices

--- a/public/index.css
+++ b/public/index.css
@@ -1,8 +1,17 @@
+html {
+  box-sizing: border-box;
+  width: 100vw;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 body {
 	font-family: "Trebuchet MS", Helvetica, sans-serif;
-	/*background-color: #F2F4F4;*/
 	background-color: #34495E;
 	text-align: center;
+	width: 100vw;
+	margin: 0;
 }
 
 .info {
@@ -18,9 +27,12 @@ body {
 
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
 	.info, #root {
-		box-sizing: border-box;
 		max-width: 100vw;
 		padding: 8px;
+	}
+
+	.info {
+		margin: 0 !important;
 	}
 }
 
